# REG-NMS-Matching-Engine

./: .gitignore  CMakelists.txt  README.md
include/: crow_all.h
src/: CMakeLists.txt  EventFeed.h  FeeCalculator.cpp  FeeCalculator.h  MarketDataServer.cpp  MarketDataServer.h  MatchingEngine.cpp  MatchingEngine.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  PersistenceManager.cpp  PersistenceManager.h  TradeExecutionFeed.h  main.cpp
tests/: CMakeLists.txt  MatchingTests.cpp
